# job-copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/engine-api/: Cargo.toml  Dockerfile  README.md
apps/engine-api/.cargo/: audit.toml
apps/engine-api/migrations/: 20260410233000_create_core_tables.sql  20260411000000_add_application_related_tables.sql  20260412000000_add_profile_preferences.sql  20260413000000_add_search_indices.sql  20260413010000_add_offers_and_profile_skills_recency.sql  20260414020000_add_job_variants.sql  20260414110000_add_job_lifecycle_fields.sql  20260414130000_add_job_variant_dedupe_key.sql  20260414183000_add_profile_feedback_tables.sql  20260415090000_add_user_events.sql  20260416000000_add_market_snapshots.sql  20260419000000_add_notifications.sql  20260419142000_normalize_legacy_profile_roles.sql  20260419153000_add_profile_compensation_and_languages.sql  20260422120000_add_profile_search_preferences.sql  20260422130000_add_application_outcome_tracking.sql  20260422140000_add_job_feedback_tags.sql  20260422150000_add_job_salary_feedback.sql  20260422160000_add_job_interest_rating.sql  20260422170000_add_work_mode_feedback.sql  20260422180000_add_engagement_event_types.sql  20260422190000_add_legitimacy_signal.sql  20260422193000_add_profile_ml_state_and_metrics.sql  20260424120000_scope_applications_by_profile.sql  20260424130000_add_performance_indexes.sql  20260425120000_add_profile_feedback_perf_indexes.sql  20260427000100_add_notification_preferences.sql  20260427120000_add_language_preference.sql  20260428120000_add_profile_work_mode_preference.sql  20260428130000_add_profile_salary_constraints.sql  20260428140000_add_profile_preferred_locations.sql  20260428190000_add_profile_links.sql  20260428193000_add_profile_experience.sql  20260429120000_add_missing_query_indexes.sql  20260429143000_add_company_feedback_notes.sql  20260429160000_add_bad_fit_reason.sql  20260429170000_normalize_job_interest_rating_scale.sql  20260429183000_add_job_salary_usd_columns.sql  20260429190000_add_job_extracted_skills.sql  20260429192000_add_job_quality_score.sql  (+7 more)
apps/engine-api/seeds/: dev.sql
apps/engine-api/src/: config.rs  main.rs  state.rs
apps/engine-api/src/api/: error.rs  mod.rs
apps/engine-api/src/db/: mod.rs
apps/engine-api/src/domain/: mod.rs
apps/engine-api/src/services/: activities.rs  applications.rs  auth_credentials.rs  behavior.rs  cv_tailoring.rs  feedback.rs  fit_scoring.rs  followup.rs  funnel.rs  jobs.rs  learned_reranker.rs  matching.rs  mod.rs  notifications.rs  outcome_dataset.rs  profile_analysis.rs  profile_ml_metrics.rs  profile_ml_state.rs  profile_records.rs  profiles.rs  reranker_automation.rs  reranker_bootstrap.rs  resumes.rs  salary.rs  search_profile_builder.rs  search_ranking.rs  tokens.rs  trained_reranker.rs  user_events.rs
apps/engine-api/src/state/: test_support.rs
apps/ingestion/: Cargo.toml  Dockerfile  README.md
apps/ingestion/examples/: mock_source_jobs.json  mock_source_jobs_reactivated.json  mock_source_jobs_updated.json  sample_jobs.json
apps/ingestion/src/: app.rs  cli.rs  daemon.rs  db.rs  db_runtime.rs  error.rs  main.rs  models.rs
apps/ingestion/src/adapters/: mock_source.rs  mod.rs
apps/ingestion/src/db/: mod.rs  reconciliation.rs  snapshots.rs  upserts.rs
apps/ingestion/src/pipeline/: daemon.rs  mod.rs  run_once.rs
apps/ingestion/src/scrapers/: company.rs  detail_merge.rs  djinni.rs  dou_ua.rs  headers.rs  http.rs  mod.rs  remote.rs  robota_ua.rs  runner.rs  salary.rs  seniority.rs  skills.rs  text.rs  work_ua.rs
apps/ingestion/tests/fixtures/: djinni_detail.html  djinni_detail_regression.html  dou_ua_detail.html  dou_ua_detail_regression.html  mock_source_jobs_inactivated.json  mock_source_jobs_initial.json  mock_source_jobs_payload_updated.json  mock_source_jobs_reactivated.json  robota_ua_detail.html  (+2 more)
(+782 files in other folders)
