[workspace]
resolver = "2"
members = ["apps/engine-api", "apps/ingestion"]

[workspace.dependencies]
argon2 = "0.5"
axum = "0.8"
axum-prometheus = "0.10.0"
chrono = { version = "0.4", default-features = false, features = [
	"clock",
	"std",
] }
jsonwebtoken = "10.3.0"
regex = "1"
reqwest = { version = "0.13.3", default-features = false, features = [
	"json",
	"rustls",
] }
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
sqlx = { version = "0.8.3", default-features = false, features = [
	"runtime-tokio-rustls",
	"postgres",
	"migrate",
	"json",
	"macros",
	"derive",
] }
tokio = { version = "1.51.1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = [
	"env-filter",
	"fmt",
	"json",
] }
uuid = { version = "1", features = ["v7"] }
