[package]
name = "engine-api"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "json", "macros", "derive"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v7"] }
