[package]
name = "engine-api"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
argon2.workspace = true
axum.workspace = true
axum-prometheus.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
job-copilot-domain = { path = "../../crates/job-copilot-domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
