[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[features]
mock = []

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.3", default-features = false, features = [
	"runtime-tokio-rustls",
	"postgres",
	"json",
	"migrate",
	"macros",
] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
