[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[features]
mock = ["job-copilot-domain/mock"]

[dependencies]
job-copilot-domain = { path = "../../crates/job-copilot-domain" }
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
job-copilot-domain = { path = "../../crates/job-copilot-domain", features = ["mock"] }
